stopped using simpler_format to insert <br> into people content. instead using css's whitespace attribute.

--- a/public/stylesheets/application.scss
+++ b/public/stylesheets/application.scss
@@ -458,6 +458,7 @@ a.current-nav, #footer a.current-nav {
   letter-spacing: 0.04em;
   font-family: $people-font;
   color: $white;
+  white-space: pre-line;
 }
 .people-content a {
   color: $white;
